--- a/detail/msi/msi_GP62M.html
+++ b/detail/msi/msi_GP62M.html
@@ -617,7 +617,7 @@
 					<div class="col-md-2 col-xs-6" style="margin-left:100px">
 						<div class="product">
 							<div class="product-img">
-								<img src="../../../img/msi_1.jpg" height="120px" width="100px" alt="">
+								<img src="https://phongvu.vn/media/catalog/product/cache/23/image/9df78eab33525d08d6e5fb8d27136e95/m/s/msi_gv62_3_1.jpg" height="120px" width="100px" alt="">
 								<div class="product-label">
 									<span class="sale">-3%</span>
 								</div>
@@ -639,7 +639,7 @@
 					<div class="col-md-2 col-xs-6">
 						<div class="product">
 							<div class="product-img">
-								<img src="../../../img/asus_1.jpg" height="120px" width="100px" alt="">
+								<img src="https://phongvu.vn/media/catalog/product/cache/23/image/9df78eab33525d08d6e5fb8d27136e95/3/5/35124_ltac407_1_1.jpg" height="120px" width="100px" alt="">
 								<div class="product-label">
 									<span class="sale">-3%</span>
 								</div>
