--- a/detail/dell/dell vostro 3568.html
+++ b/detail/dell/dell vostro 3568.html
@@ -24,7 +24,7 @@
  		<link rel="stylesheet" href="../../css/font-awesome.min.css">
 
  		<!-- Custom stlylesheet -->
- 		<link type="text/css" rel="stylesheet" href="../../css/style.css"/>
+ 		<link type="text/css" rel="stylesheet" href="../../css/style1.css"/>
 
 		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
