--- a/index.html
+++ b/index.html
@@ -61,7 +61,16 @@
 							</div>
 							<!-- search sort -->
 							<div class="col-sm-2">
-								
+								<div class="dropdown">
+									<button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+										Tất cả
+									</button>
+									<div class="dropdown-menu">
+										<a class="dropdown-item" href="#">Bán chạy nhất</a>
+										<a class="dropdown-item" href="#">Link 2</a>
+										<a class="dropdown-item" href="#">Link 3</a>
+									</div>
+								</div>
 							</div>
 							<!-- search button -->
 							<div class="col-sm-2">
