--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
 			<div id="top-header">
 				<div class="container">
 					<ul class="header-links pull-left">
-						<li><a href="#"><i class="fa fa-phone"></i> +021-95-51-84</a></li>
-						<li><a href="#"><i class="fa fa-envelope-o"></i> email@email.com</a></li>
-						<li><a href="#"><i class="fa fa-map-marker"></i> 1734 Stonecoal Road</a></li>
+						<li><a href="#"><i class="fa fa-phone"></i> 0989 871 786</a></li>
+						<li><a href="#"><i class="fa fa-envelope-o"></i> laptopnumone@numone.com.vn</a></li>
+						<li><a href="#"><i class="fa fa-map-marker"></i> 227 Nguyễn Văn Cừ, phường 4, quận 5</a></li>
 					</ul>
 					<ul class="header-links pull-right">
-						<li><a href="#"><i class="fa fa-dollar"></i> USD</a></li>
+						<li><a href="#"><i class="fa fa-dollar"></i> VNĐ</a></li>
 						<li><a href="#"><i class="fa fa-user-o"></i> My Account</a></li>
 					</ul>
 				</div>
@@ -75,9 +75,10 @@
 							<div class="header-search">
 								<form>
 									<select class="input-select">
-										<option value="0">All Categories</option>
-										<option value="1">Category 01</option>
-										<option value="1">Category 02</option>
+										<option value="0">Tất cả</option>
+										<option value="1">Gaming</option>
+										<option value="2">Văn phòng</option>
+										<option value="3">Doanh nhân</option>
 									</select>
 									<input class="input" placeholder="Search here">
 									<button class="search-btn">Search</button>
