--- a/index.html
+++ b/index.html
@@ -172,12 +172,10 @@
 					<!-- NAV -->
 					<ul class="main-nav nav navbar-nav">
 						<li class="active"><a href="#">Home</a></li>
-						<li><a href="#">Hot Deals</a></li>
-						<li><a href="#">Categories</a></li>
-						<li><a href="#">Laptops</a></li>
-						<li><a href="#">Smartphones</a></li>
-						<li><a href="#">Cameras</a></li>
-						<li><a href="#">Accessories</a></li>
+						<li><a href="#">DELL</a></li>
+						<li><a href="#">ASUS</a></li>
+						<li><a href="#">ACER</a></li>
+						<li><a href="#">APPLE</a></li>
 					</ul>
 					<!-- /NAV -->
 				</div>
