update style css và các chi tiết sản phẩm

--- a/detail/dell/dell inspiron 13 5378.html
+++ b/detail/dell/dell inspiron 13 5378.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		 <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-		<title>Laptop DELL VOSTRO 3568-VTI35037 (BLACK)</title>
+		<title>Laptop DELL INSPIRON 13 5378-26W972 (GRAY)</title>
 
  		<!-- Google font -->
  		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
@@ -104,16 +104,16 @@
 													<img src="./img/product01.png" alt="">
 												</div>
 												<div class="product-body">
-													<h3 class="product-name"><a href="#">Máy xách tay/ Laptop DELL VOSTRO 3568-VTI35037 (BLACK)
+													<h3 class="product-name"><a href="#">Máy xách tay/ Laptop DELL INSPIRON 13 5378-26W972 (GRAY)
 </a></h3>
-													<h4 class="product-price"><span class="qty">1x</span>11.090.000 ₫</h4>
+													<h4 class="product-price"><span class="qty">1x</span>16.990.000 ₫</h4>
 												</div>
 												<button class="delete"><i class="fa fa-close"></i></button>
 											</div>
 										</div>
 										<div class="cart-summary">
 											<small>1 Item(s) selected</small>
-											<h5>SUBTOTAL: 11.090.000 ₫</h5>
+											<h5>SUBTOTAL: 16.990.000 ₫</h5>
 										</div>
 										<div class="cart-btns">
 											<a href="#">View Cart</a>
@@ -178,7 +178,7 @@
 							<li><a href="#">Trang chủ</a></li>
 							<li><a href="#">Laptop</a></li>
 							<li><a href="#">DELL</a></li>
-							<li class="active">DELL VOSTRO 3568-VTI35037 (BLACK)</li>
+							<li class="active">DELL INSPIRON 13 5378-26W972 (GRAY)</li>
 						</ul>
 					</div>
 				</div>
@@ -198,15 +198,15 @@
 					<div class="col-md-5 col-md-push-2">
 						<div id="product-main-img">
 							<div class="product-preview">
-								<img src="https://phongvu.vn/media/catalog/product/cache/23/thumbnail/9df78eab33525d08d6e5fb8d27136e95/1/0/10030511-mtxt-dell-vostro-15-3568-vti35037-_en.jpg" alt="">
+								<img src="https://phongvu.vn/media/catalog/product/cache/23/thumbnail/9df78eab33525d08d6e5fb8d27136e95/uploads/product/po_13413_15919/2017/09/15/13413_1505456421-2.jpg" alt="">
 							</div>
 
 							<div class="product-preview">
-								<img src="https://phongvu.vn/media/catalog/product/cache/23/thumbnail/9df78eab33525d08d6e5fb8d27136e95/1/0/10030511-mtxt-dell-vostro-15-3568-vti35037-_en-02.png" alt="">
+								<img src="https://phongvu.vn/media/catalog/product/cache/23/thumbnail/9df78eab33525d08d6e5fb8d27136e95/uploads/product/po_13413_15919/2017/09/15/13413_1505456421-3.jpg" alt="">
 							</div>
 
 							<div class="product-preview">
-								<img src="https://phongvu.vn/media/catalog/product/cache/23/thumbnail/9df78eab33525d08d6e5fb8d27136e95/1/0/10030511-mtxt-dell-vostro-15-3568-vti35037-_en-01.png" alt="">
+								<img src="https://phongvu.vn/media/catalog/product/cache/23/thumbnail/9df78eab33525d08d6e5fb8d27136e95/uploads/product/po_13413_15919/2017/09/15/13413_1505456422-5.jpg" alt="">
 							</div>
 						</div>
 					</div>
@@ -216,15 +216,15 @@
 					<div class="col-md-2  col-md-pull-5">
 						<div id="product-imgs">
 							<div class="product-preview">
-								<img src="https://phongvu.vn/media/catalog/product/cache/23/thumbnail/70x/9df78eab33525d08d6e5fb8d27136e95/1/0/10030511-mtxt-dell-vostro-15-3568-vti35037-_en.jpg" alt="">
+								<img src="https://phongvu.vn/media/catalog/product/cache/23/thumbnail/380x/9df78eab33525d08d6e5fb8d27136e95/uploads/product/po_13413_15919/2017/09/15/13413_1505456421-2.jpg" alt="">
 							</div>
 
 							<div class="product-preview">
-								<img src="https://phongvu.vn/media/catalog/product/cache/23/thumbnail/380x/9df78eab33525d08d6e5fb8d27136e95/1/0/10030511-mtxt-dell-vostro-15-3568-vti35037-_en-02.png" alt="">
+								<img src="https://phongvu.vn/media/catalog/product/cache/23/thumbnail/380x/9df78eab33525d08d6e5fb8d27136e95/uploads/product/po_13413_15919/2017/09/15/13413_1505456421-3.jpg" alt="">
 							</div>
 
 							<div class="product-preview">
-								<img src="https://phongvu.vn/media/catalog/product/cache/23/thumbnail/70x/9df78eab33525d08d6e5fb8d27136e95/1/0/10030511-mtxt-dell-vostro-15-3568-vti35037-_en-01.png" alt="">
+								<img src="https://phongvu.vn/media/catalog/product/cache/23/thumbnail/380x/9df78eab33525d08d6e5fb8d27136e95/uploads/product/po_13413_15919/2017/09/15/13413_1505456422-5.jpg" alt="">
 							</div>
 						</div>
 					</div>
@@ -233,7 +233,7 @@
 					<!-- Product details -->
 					<div class="col-md-5">
 						<div class="product-details">
-							<h2 class="product-name">Máy xách tay/ Laptop DELL VOSTRO 3568-VTI35037 (BLACK)
+							<h2 class="product-name">Máy xách tay/ Laptop INSPIRON 13 5378-26W972 (GRAY)
 </h2>
 							<div>
 								<div class="product-rating">
@@ -241,29 +241,37 @@
 									<i class="fa fa-star"></i>
 									<i class="fa fa-star"></i>
 									<i class="fa fa-star"></i>
-									<i class="fa fa-star-o"></i>
+									<i class="fa fa-star"></i>
 								</div>
-								<a class="review-link" href="#">150 Lượt xem | Đã bán: 15</a>
+								<a class="review-link" href="#">186 Lượt xem | Đã bán: 40</a>
 							</div>
-							<div>
-								<h3 class="product-price">11.090.000 ₫</h3>
+							<div class="product-body">	
+								<div class="product-label">
+									<span class="sale">-8%</span>
+								</div>
+								<div><del class="product-old-price">18.490.000 ₫</del></div>
+								<h4 class="product-price">16.990.000 ₫</h4>
 								<span class="product-available">Còn hàng</span>
 							</div>
-							<p> - CPU Intel Core i3-7100U (2.4GHz. 3MB Cache)<br>
-								- RAM 4GB DDR4 2400MHz<br>
-								- HDD 1 TB SATA 5400rpm<br>
-								- VGA Intel HD Graphics 520<br>
-								- Màn hình: 15.6" HD (1366 x 768)<br>
-								- Trọng lượng: 2.1kg<br>
-								- Hệ điều hành: Free DOS<br>
+							<p> - CPU Intel Core i5-7200U (2.5GHz - up to 3.1Ghz. 3MB Cache)<br>
+								- RAM 4GB DDR4 2133MHz<br>
+								- HDD 500GB SATA 5400rpm<br>
+								- VGA AMD Radeon R5 M430 2GB + Intel HD Graphics 620<br>
+								- Màn hình: 13.3" Full HD (1920x1080)<br>
+								- Trọng lượng: 1.8kg<br>
+								- Hệ điều hành: Win 10 Home<br>
 								- Xuất xứ: Trung Quốc<br>
 								- Nhà sản xuất: DELL<br>
+							<p style="font-weight: bold">
+								Tặng kèm:<br>
+								+ 1 Túi đựng laptop 15'' (từ 04/11/2017 đến hết 01/01/2019).<br>
+								
 							<div class="product-options">
 			
 								<label>
 									Màu sắc
 									<select class="input-select">
-										<option value="0">Black</option>
+										<option value="0">Gray</option>
 									</select>
 								</label>
 							</div>
@@ -281,7 +289,7 @@
 							</div>
 							<ul class="product-links">
 								<li>Danh mục:</li>
-								<li><a href="#">Laptop Văn Phòng</a></li>
+								<li><a href="#">Laptop Doanh Nhân</a></li>
 								<li><a href="#">Laptop DELL</a></li>
 							</ul>
 
@@ -329,23 +337,23 @@
             </tr>
                     <tr>
                 <th class="attribute-label">Màu sắc</th>
-                <td class="attribute-value">Đen</td>
+                <td class="attribute-value">Xám</td>
             </tr>
                     <tr>
                 <th class="attribute-label">Series</th>
-                <td class="attribute-value">Dell Vostro</td>
+                <td class="attribute-value">Dell Inspiron</td>
             </tr>
                     <tr>
                 <th class="attribute-label">Mã</th>
-                <td class="attribute-value">3568</td>
+                <td class="attribute-value">3254</td>
             </tr>
                     <tr>
                 <th class="attribute-label">CPU Series</th>
-                <td class="attribute-value">Intel Core i3 7th Gen</td>
+                <td class="attribute-value">Intel Core i5 7th Gen</td>
             </tr>
                     <tr>
                 <th class="attribute-label">CPU</th>
-                <td class="attribute-value">i3-7100U</td>
+                <td class="attribute-value">i5-7200U</td>
             </tr>
                     <tr>
                 <th class="attribute-label">Số nhân</th>
@@ -353,7 +361,7 @@
             </tr>
                     <tr>
                 <th class="attribute-label">Xung nhịp tối thiếu</th>
-                <td class="attribute-value">2.4 GHz</td>
+                <td class="attribute-value">2.5 GHz</td>
             </tr>
                     <tr>
                 <th class="attribute-label">Cache CPU</th>
@@ -373,7 +381,7 @@
             </tr>
                     <tr>
                 <th class="attribute-label">Kích thước màn hình</th>
-                <td class="attribute-value">15.6"</td>
+                <td class="attribute-value">13.3"</td>
             </tr>
                     <tr>
                 <th class="attribute-label">Màn hình cảm ứng</th>
@@ -381,15 +389,15 @@
             </tr>
                     <tr>
                 <th class="attribute-label">Độ phân giải</th>
-                <td class="attribute-value">1366 x 768</td>
+                <td class="attribute-value">1920 x 1080</td>
             </tr>
                     <tr>
                 <th class="attribute-label">Chuẩn màn hình</th>
-                <td class="attribute-value">HD</td>
+                <td class="attribute-value">Full HD</td>
             </tr>
                     <tr>
                 <th class="attribute-label">Card màn hình Onboard</th>
-                <td class="attribute-value">Intel HD Graphics 520</td>
+                <td class="attribute-value">Intel HD Graphics 620</td>
             </tr>
                     <tr>
                 <th class="attribute-label">Card màn hình gắn ngoài</th>
@@ -401,7 +409,7 @@
             </tr>
                     <tr>
                 <th class="attribute-label">HDD</th>
-                <td class="attribute-value">1TB</td>
+                <td class="attribute-value">500GB</td>
             </tr>
                     <tr>
                 <th class="attribute-label">Dung lượng</th>
@@ -409,11 +417,11 @@
             </tr>
                     <tr>
                 <th class="attribute-label">Ổ đĩa quang</th>
-                <td class="attribute-value">Có</td>
+                <td class="attribute-value">Không</td>
             </tr>
                     <tr>
                 <th class="attribute-label">Khu phím số</th>
-                <td class="attribute-value">Có</td>
+                <td class="attribute-value">Không</td>
             </tr>
                     <tr>
                 <th class="attribute-label">LED Bàn phím</th>
@@ -433,7 +441,7 @@
             </tr>
                     <tr>
                 <th class="attribute-label">Số cổng USB</th>
-                <td class="attribute-value">4</td>
+                <td class="attribute-value">2</td>
             </tr>
                     <tr>
                 <th class="attribute-label">Số cổng HDMI</th>
@@ -445,19 +453,19 @@
             </tr>
                     <tr>
                 <th class="attribute-label">Cổng VGA</th>
-                <td class="attribute-value">Có</td>
+                <td class="attribute-value">Không</td>
             </tr>
                     <tr>
                 <th class="attribute-label">Kích thước</th>
-                <td class="attribute-value">354 x 246 x 23mm</td>
+                <td class="attribute-value">Đang cập nhật</td>
             </tr>
                     <tr>
                 <th class="attribute-label">Khối lượng</th>
-                <td class="attribute-value">2.1kg</td>
+                <td class="attribute-value">1.8kg</td>
             </tr>
                     <tr>
                 <th class="attribute-label">Số cell pin</th>
-                <td class="attribute-value">4</td>
+                <td class="attribute-value">3</td>
             </tr>
                     <tr>
                 <th class="attribute-label">Hỗ trợ VR</th>
