--- a/index.html
+++ b/index.html
@@ -185,60 +185,59 @@
 		</nav>
 		<!-- /NAVIGATION -->
 
-		<!-- SECTION -->
-		<div class="section">
-			<!-- container -->
-			<div class="container">
-				<!-- row -->
-				<div class="row">
-					<!-- shop -->
-					<div class="col-md-4 col-xs-6">
-						<div class="shop">
-							<div class="shop-img">
-								<img src="./img/shop01.png" alt="">
-							</div>
-							<div class="shop-body">
-								<h3>Laptop<br>Collection</h3>
-								<a href="#" class="cta-btn">Shop now <i class="fa fa-arrow-circle-right"></i></a>
-							</div>
-						</div>
-					</div>
-					<!-- /shop -->
-
-					<!-- shop -->
-					<div class="col-md-4 col-xs-6">
-						<div class="shop">
-							<div class="shop-img">
-								<img src="./img/shop03.png" alt="">
-							</div>
-							<div class="shop-body">
-								<h3>Accessories<br>Collection</h3>
-								<a href="#" class="cta-btn">Shop now <i class="fa fa-arrow-circle-right"></i></a>
-							</div>
-						</div>
-					</div>
-					<!-- /shop -->
-
-					<!-- shop -->
-					<div class="col-md-4 col-xs-6">
-						<div class="shop">
-							<div class="shop-img">
-								<img src="./img/shop02.png" alt="">
-							</div>
-							<div class="shop-body">
-								<h3>Cameras<br>Collection</h3>
-								<a href="#" class="cta-btn">Shop now <i class="fa fa-arrow-circle-right"></i></a>
-							</div>
-						</div>
-					</div>
-					<!-- /shop -->
+		<!-- Main Carousel -->
+	<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+		<ol class="carousel-indicators">
+			<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+			<li data-target="#carousel-example-generic" data-slide-to="1"></li>
+			<li data-target="#carousel-example-generic" data-slide-to="2"></li>
+			<li data-target="#carousel-example-generic" data-slide-to="3"></li>
+		</ol>
+		<div class="carousel-inner" role="listbox">
+			<div class="carousel-item active">
+				<img  width = "100%" height="auto" src="images/1.jpg" class = "full-screen" alt="First slide">
+				<div class="carousel-caption text-xs-left text-carousel">
+					<p>Newpapers/Magazine</p>
+					<h6 class="display-4">Something is wrong but with me, it's wonderful!</h6>
+					<button class="button-carousel btn btn-default">Detail</button>
 				</div>
-				<!-- /row -->
 			</div>
-			<!-- /container -->
+			<div class="carousel-item ">
+				<img width = "100%" height="auto" src="images/2.jpg" class = "full-screen" alt="Second slide">
+				<div class="carousel-caption text-xs-left text-carousel">
+					<p>Newpapers/Magazine</p>
+					<h6 class="display-4">Something is wrong but with me, it's wonderful!</h6>
+					<button class="button-carousel btn btn-default">Detail</button>
+				</div>
+			</div>
+			<div class="carousel-item ">
+				<img width = "100%" height="auto" src="images/3.jpg" class = "full-screen" alt="Third slide">
+				<div class="carousel-caption text-xs-left text-carousel">
+					<p>Newpapers/Magazine</p>
+					<h6 class="display-4">Something is wrong but with me, it's wonderful!</h6>
+					<button class="button-carousel btn btn-default">Detail</button>
+				</div>
+			</div>
+			<div class="carousel-item ">
+				<img width = "100%" height="auto" src="images/4.jpg"  class = "full-screen" alt="Fourth slide">
+				<div class="carousel-caption text-xs-left text-carousel">
+					<p>Newpapers/Magazine</p>
+					<h6 class="display-4">Something is wrong but with me, it's wonderful!</h6>
+					<button class="button-carousel btn btn-default">Detail</button>
+				</div>
+			</div>
 		</div>
-		<!-- /SECTION -->
 
+		<a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+			<span class="icon-prev" aria-hidden="true"></span>
+			<span class="sr-only">Previous</span>
+		</a>
+		<a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+			<span class="icon-next" aria-hidden="true"></span>
+			<span class="sr-only">Next</span>
+		</a>
+	</div> 
+	<!-- End of main carousel -->
 		<!-- SECTION SẢN PHẨM BÁN CHẠY NHẤT-->
 		<div class="section">
 			<!-- container -->
