fix some details

--- a/detail/dell/dell inspiron 13 5378.html
+++ b/detail/dell/dell inspiron 13 5378.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		 <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-		<title>Laptop DELL INSPIRON 13 5378-26W972 (GRAY)</title>
+		<title>Laptop DELL INSPIRON 13 5378-26W972</title>
 
  		<!-- Google font -->
  		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
@@ -104,7 +104,7 @@
 													<img src="./img/product01.png" alt="">
 												</div>
 												<div class="product-body">
-													<h3 class="product-name"><a href="#">Máy xách tay/ Laptop DELL INSPIRON 13 5378-26W972 (GRAY)
+													<h3 class="product-name"><a href="#">Máy xách tay/ Laptop DELL INSPIRON 13 5378-26W972 (Xám)
 </a></h3>
 													<h4 class="product-price"><span class="qty">1x</span>16.990.000 ₫</h4>
 												</div>
@@ -152,12 +152,10 @@
 					<!-- NAV -->
 					<ul class="main-nav nav navbar-nav">
 						<li class="active"><a href="#">Home</a></li>
-						<li><a href="#">Hot Deals</a></li>
-						<li><a href="#">Categories</a></li>
-						<li><a href="#">Laptops</a></li>
-						<li><a href="#">Smartphones</a></li>
-						<li><a href="#">Cameras</a></li>
-						<li><a href="#">Accessories</a></li>
+						<li><a href="#">DELL</a></li>
+						<li><a href="#">ASUS</a></li>
+						<li><a href="#">ACER</a></li>
+						<li><a href="#">APPLE</a></li>
 					</ul>
 					<!-- /NAV -->
 				</div>
@@ -178,7 +176,7 @@
 							<li><a href="#">Trang chủ</a></li>
 							<li><a href="#">Laptop</a></li>
 							<li><a href="#">DELL</a></li>
-							<li class="active">DELL INSPIRON 13 5378-26W972 (GRAY)</li>
+							<li class="active">DELL INSPIRON 13 5378-26W972 (Xám)</li>
 						</ul>
 					</div>
 				</div>
@@ -233,7 +231,7 @@
 					<!-- Product details -->
 					<div class="col-md-5">
 						<div class="product-details">
-							<h2 class="product-name">Máy xách tay/ Laptop INSPIRON 13 5378-26W972 (GRAY)
+							<h2 class="product-name">Máy xách tay/ Laptop INSPIRON 13 5378-26W972 (Xám)
 </h2>
 							<div>
 								<div class="product-rating">
@@ -271,7 +269,7 @@
 								<label>
 									Màu sắc
 									<select class="input-select">
-										<option value="0">Gray</option>
+										<option value="0">Xám</option>
 									</select>
 								</label>
 							</div>
@@ -716,7 +714,7 @@
 								</div>
 							</div>
 							<div class="product-body">
-								<h3 class="product-name"><a href="#">DELL INSPIRON 13 5378-26W972 (GRAY)</a></h3>
+								<h3 class="product-name"><a href="#">DELL INSPIRON 13 5378-26W972 (Xám)</a></h3>
 								<h4 class="product-price">16.990.000 ₫ <del class="product-old-price">18.490.000 ₫</del></h4>
 								<div class="product-rating">
 								</div>
@@ -736,7 +734,7 @@
 								</div>
 							</div>
 							<div class="product-body">
-								<h3 class="product-name"><a href="#">DELL INSPIRON 14 7460-N4I5259W (BRONZE)</a></h3>
+								<h3 class="product-name"><a href="#">DELL INSPIRON 14 7460-N4I5259W (Đồng)</a></h3>
 								<h4 class="product-price">16.490.000 ₫ <del class="product-old-price">19.990.000 ₫</del></h4>
 								<div class="product-rating">
 								</div>
@@ -756,7 +754,7 @@
 								</div>
 							</div>
 							<div class="product-body">
-								<h3 class="product-name"><a href="#">DELL INSPIRON 14 5468-K5CDP1 (SILVER)</a></h3>
+								<h3 class="product-name"><a href="#">DELL INSPIRON 14 5468-K5CDP1 (Bạc)</a></h3>
 								<h4 class="product-price">13.690.000 ₫ <del class="product-old-price">15.190.000 ₫</del></h4>
 								<div class="product-rating">
 								</div>
@@ -776,7 +774,7 @@
 								</div>
 							</div>
 							<div class="product-body">
-								<h3 class="product-name"><a href="#">DELL XPS13 9360-99H103 (I7-7560U-SSD512G) (SILVER)</a></h3>
+								<h3 class="product-name"><a href="#">DELL XPS13 9360-99H103 (I7-7560U-SSD512G) (Bạc)</a></h3>
 								<h4 class="product-price">46.090.000 ₫ <del class="product-old-price">49.590.000 ₫</del></h4>
 								<div class="product-rating">
 								</div>
@@ -793,7 +791,7 @@
 								<img src="https://phongvu.vn/media/catalog/product/cache/23/image/380x/9df78eab33525d08d6e5fb8d27136e95/1/0/10031690-mtxt-dell-vostro-14-3468-i5-4-1-70088614_1.jpg" alt="">
 							</div>
 							<div class="product-body">
-								<h3 class="product-name"><a href="#">DELL VOSTRO 3468 (F3468-70088614) (BLACK)</a></h3>
+								<h3 class="product-name"><a href="#">DELL VOSTRO 3468 (F3468-70088614) (Đen)</a></h3>
 								<h4 class="product-price">12.790.000 ₫ </h4>
 								<div class="product-rating">
 								</div>
@@ -835,7 +833,7 @@
 								</div>
 							</div>
 							<div class="product-body">
-								<h3 class="product-name"><a href="#">DELL INSPIRON 13 5378-26W972 (GRAY)</a></h3>
+								<h3 class="product-name"><a href="#">DELL INSPIRON 13 5378-26W972 (Xám)</a></h3>
 								<h4 class="product-price">16.990.000 ₫ <del class="product-old-price">18.490.000 ₫</del></h4>
 								<div class="product-rating">
 								</div>
@@ -855,7 +853,7 @@
 								</div>
 							</div>
 							<div class="product-body">
-								<h3 class="product-name"><a href="#">ASUS UX510UX-CN204 (I5-7200U) (GRAY)</a></h3>
+								<h3 class="product-name"><a href="#">ASUS UX510UX-CN204 (I5-7200U) (Xám)</a></h3>
 								<h4 class="product-price">15.490.000 ₫ <del class="product-old-price">17.190.000 ₫</del></h4>
 								<div class="product-rating">
 								</div>
@@ -873,7 +871,7 @@
 								
 							</div>
 							<div class="product-body">
-								<h3 class="product-name"><a href="#">ASUS X405UA-BV330T (I3-7100U) (GRAY)</a></h3>
+								<h3 class="product-name"><a href="#">ASUS X405UA-BV330T (I3-7100U) (Xám)</a></h3>
 								<h4 class="product-price">11.790.000 ₫ </h4>
 								<div class="product-rating">
 								</div>
@@ -891,7 +889,7 @@
 								
 							</div>
 							<div class="product-body">
-								<h3 class="product-name"><a href="#">ASUS A540UP-DM094T (I3-7100U) (GRAY)</a></h3>
+								<h3 class="product-name"><a href="#">ASUS A540UP-DM094T (I3-7100U) (Xám)</a></h3>
 								<h4 class="product-price">11.900.000 ₫ </h4>
 								<div class="product-rating">
 								</div>
@@ -908,7 +906,7 @@
 								<img src="https://phongvu.vn/media/catalog/product/cache/23/image/380x/9df78eab33525d08d6e5fb8d27136e95/uploads/product/p_14258/2017/10/29/14258.jpg" alt="">
 							</div>
 							<div class="product-body">
-								<h3 class="product-name"><a href="#">ASUS S510UA-BQ111T (I3-7100U) (BRONZE)</a></h3>
+								<h3 class="product-name"><a href="#">ASUS S510UA-BQ111T (I3-7100U) (Vàng đồng)</a></h3>
 								<h4 class="product-price">13.290.000 ₫ </h4>
 								<div class="product-rating">
 								</div>
