--- a/detail/dell/dell vostro 3568.html
+++ b/detail/dell/dell vostro 3568.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		 <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-		<title>Laptop DELL VOSTRO 3568-VTI35037 (BLACK)</title>
+		<title>Laptop DELL VOSTRO 3568-VTI35037</title>
 
  		<!-- Google font -->
  		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
@@ -152,12 +152,10 @@
 					<!-- NAV -->
 					<ul class="main-nav nav navbar-nav">
 						<li class="active"><a href="#">Home</a></li>
-						<li><a href="#">Hot Deals</a></li>
-						<li><a href="#">Categories</a></li>
-						<li><a href="#">Laptops</a></li>
-						<li><a href="#">Smartphones</a></li>
-						<li><a href="#">Cameras</a></li>
-						<li><a href="#">Accessories</a></li>
+						<li><a href="#">DELL</a></li>
+						<li><a href="#">ASUS</a></li>
+						<li><a href="#">ACER</a></li>
+						<li><a href="#">APPLE</a></li>
 					</ul>
 					<!-- /NAV -->
 				</div>
