Update template Header - Footer

--- a/header-footer.html
+++ b/header-footer.html
@@ -190,8 +190,8 @@
 						<h3 class="footer-title">Thông tin thành viên</h3>
 						<ul class="footer-links">
 							<li>1512576 - Nguyễn Quang Tính</li>
-							<li>1512xxx - Hoàng Quốc Trung</li>
-							<li>1512xxx - Nguyễn Chí Trung</li>
+							<li>1512609 - Hoàng Quốc Trung</li>
+							<li>1512613 - Nguyễn Chí Trung</li>
 							<li>1512651 - Bùi Châu Minh Tùng</li>
 						</ul>
 					</div>
@@ -199,7 +199,7 @@
 
 				<div class="col-md-3 col-xs-6">
 					<div class="footer">
-						<h3 class="footer-title">Service</h3>
+						<h3 class="footer-title">Dịch vụ</h3>
 						<ul class="footer-links">
 							<li><a href="#">Tài khoản của tôi</a></li>
 							<li><a href="#">Xem giỏ hàng</a></li>
