--- a/header-footer.html
+++ b/header-footer.html
@@ -41,6 +41,10 @@
 								<option value="1">Gaming</option>
 								<option value="2">Văn phòng</option>
 								<option value="3">Doanh nhân</option>
+								<option value="4">Dell</option>
+								<option value="5">Asus</option>
+								<option value="6">MSI</option>
+								<option value="7">Apple</option>
 							</select>
 							<input class="input" placeholder="Search here">
 							<button class="search-btn">Search</button>
