Dell Inspiron 14 5468-K5CDP1

--- a/detail/dell/Dell Inspiron 14 5468-K5CDP1.html
+++ b/detail/dell/Dell Inspiron 14 5468-K5CDP1.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		 <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-		<title>Laptop DELL INSPIRON 14 3467-M20NR21</title>
+		<title>Laptop DELL INSPIRON 14 5468-K5CDP1</title>
 
  		<!-- Google font -->
  		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
@@ -104,16 +104,16 @@
 													<img src="./img/product01.png" alt="">
 												</div>
 												<div class="product-body">
-													<h3 class="product-name"><a href="#">Máy xách tay/ Laptop DELL INSPIRON 14 3467-M20NR21 (BLACK)
+													<h3 class="product-name"><a href="#">Máy xách tay/ Laptop DELL INSPIRON 14 5468-K5CDP1 (Bạc)
 </a></h3>
-													<h4 class="product-price"><span class="qty">1x</span>11.490.000 ₫</h4>
+													<h4 class="product-price"><span class="qty">1x</span>13.690.000 ₫</h4>
 												</div>
 												<button class="delete"><i class="fa fa-close"></i></button>
 											</div>
 										</div>
 										<div class="cart-summary">
 											<small>1 Item(s) selected</small>
-											<h5>SUBTOTAL: 11.490.000 ₫</h5>
+											<h5>SUBTOTAL: 13.690.000 ₫</h5>
 										</div>
 										<div class="cart-btns">
 											<a href="#">View Cart</a>
@@ -176,7 +176,7 @@
 							<li><a href="#">Trang chủ</a></li>
 							<li><a href="#">Laptop</a></li>
 							<li><a href="#">DELL</a></li>
-							<li class="active">DELL INSPIRON 14 3467-M20NR21 (BLACK)</li>
+							<li class="active">DELL INSPIRON 14 5468-K5CDP1 (Bạc)</li>
 						</ul>
 					</div>
 				</div>
@@ -196,15 +196,15 @@
 					<div class="col-md-5 col-md-push-2">
 						<div id="product-main-img">
 							<div class="product-preview">
-								<img src="https://phongvu.vn/media/catalog/product/cache/23/thumbnail/9df78eab33525d08d6e5fb8d27136e95/d/e/dell_inspiron_14_3467_6.jpeg" alt="">
+								<img src="https://phongvu.vn/media/catalog/product/cache/23/thumbnail/9df78eab33525d08d6e5fb8d27136e95/uploads/product/po_11708_14129/2017/05/30/11708_1496135014-3.jpg" alt="">
 							</div>
 
 							<div class="product-preview">
-								<img src="https://phongvu.vn/media/catalog/product/cache/23/thumbnail/9df78eab33525d08d6e5fb8d27136e95/d/e/dell_inspiron_14_3467_9.jpeg" alt="">
+								<img src="https://phongvu.vn/media/catalog/product/cache/23/thumbnail/9df78eab33525d08d6e5fb8d27136e95/uploads/product/po_11708_14129/2017/05/30/11708_1496135014-4.jpg" alt="">
 							</div>
 
 							<div class="product-preview">
-								<img src="https://phongvu.vn/media/catalog/product/cache/23/thumbnail/9df78eab33525d08d6e5fb8d27136e95/l/a/laptop-dell-inspiron-3467-m20nr1-black.jpg" alt="">
+								<img src="https://phongvu.vn/media/catalog/product/cache/23/thumbnail/9df78eab33525d08d6e5fb8d27136e95/uploads/product/p_11708/2017/09/26/11708.jpg" alt="">
 							</div>
 						</div>
 					</div>
@@ -214,15 +214,15 @@
 					<div class="col-md-2  col-md-pull-5">
 						<div id="product-imgs">
 							<div class="product-preview">
-								<img src="https://phongvu.vn/media/catalog/product/cache/23/thumbnail/380x/9df78eab33525d08d6e5fb8d27136e95/d/e/dell_inspiron_14_3467_6.jpeg" alt="">
+								<img src="https://phongvu.vn/media/catalog/product/cache/23/thumbnail/380x/9df78eab33525d08d6e5fb8d27136e95/uploads/product/po_11708_14129/2017/05/30/11708_1496135014-3.jpg" alt="">
 							</div>
 
 							<div class="product-preview">
-								<img src="https://phongvu.vn/media/catalog/product/cache/23/thumbnail/380x/9df78eab33525d08d6e5fb8d27136e95/d/e/dell_inspiron_14_3467_9.jpeg" alt="">
+								<img src="https://phongvu.vn/media/catalog/product/cache/23/thumbnail/380x/9df78eab33525d08d6e5fb8d27136e95/uploads/product/po_11708_14129/2017/05/30/11708_1496135014-4.jpg" alt="">
 							</div>
 
 							<div class="product-preview">
-								<img src="https://phongvu.vn/media/catalog/product/cache/23/thumbnail/380x/9df78eab33525d08d6e5fb8d27136e95/l/a/laptop-dell-inspiron-3467-m20nr1-black.jpg" alt="">
+								<img src="https://phongvu.vn/media/catalog/product/cache/23/thumbnail/380x/9df78eab33525d08d6e5fb8d27136e95/uploads/product/p_11708/2017/09/26/11708.jpg" alt="">
 							</div>
 						</div>
 					</div>
@@ -231,7 +231,7 @@
 					<!-- Product details -->
 					<div class="col-md-5">
 						<div class="product-details">
-							<h2 class="product-name">Máy xách tay/ Laptop DELL VOSTRO 3568-VTI35037 (BLACK)
+							<h2 class="product-name">Máy xách tay/ Laptop DELL INSPIRON 14 5468-K5CDP1 (Bạc)
 </h2>
 							<div>
 								<div class="product-rating">
@@ -241,19 +241,23 @@
 									<i class="fa fa-star"></i>
 									<i class="fa fa-star-o"></i>
 								</div>
-								<a class="review-link" href="#">143 Lượt xem | Đã bán: 23</a>
+								<a class="review-link" href="#">236 Lượt xem | Đã bán: 57</a>
 							</div>
-							<div>
-								<h3 class="product-price">11.490.000 ₫</h3>
+							<div class="product-body">	
+								<div class="product-label">
+									<span class="sale">-10%</span>
+								</div>
+								<div><del class="product-old-price">15.190.000 ₫</del></div>
+								<h4 class="product-price">13.690.000 ₫</h4>
 								<span class="product-available">Còn hàng</span>
 							</div>
-							<p> - CPU Intel Core i3-7100U (2.4GHz. 3MB Cache)<br>
+							<p> - CPU Intel Core i5-7200U (2.5GHz - up to 3.1Ghz. 3MB Cache)<br>
 								- RAM 4GB DDR4 2133MHz<br>
-								- HDD 1 TB SATA 5400rpm<br>
-								- VGA Intel HD Graphics 620<br>
+								- HDD 500GB SATA 5400rpm<br>
+								- VGA AMD Radeon R7 M440 2GB + Intel HD Graphics 620<br>
 								- Màn hình: 14" HD (1366 x 768)<br>
-								- Trọng lượng: 1,81kg<br>
-								- Hệ điều hành: Win 10<br>
+								- Trọng lượng: 2.06kg<br>
+								- Hệ điều hành: Win 10 Home<br>
 								- Xuất xứ: Trung Quốc<br>
 								- Nhà sản xuất: DELL<br>
 							<p style="font-weight: bold;">
@@ -265,7 +269,7 @@
 								<label>
 									Màu sắc
 									<select class="input-select">
-										<option value="0">Black</option>
+										<option value="0">Bạc</option>
 									</select>
 								</label>
 							</div>
@@ -331,7 +335,7 @@
             </tr>
                     <tr>
                 <th class="attribute-label">Màu sắc</th>
-                <td class="attribute-value">Đen</td>
+                <td class="attribute-value">Bạc</td>
             </tr>
                     <tr>
                 <th class="attribute-label">Series</th>
@@ -339,15 +343,15 @@
             </tr>
                     <tr>
                 <th class="attribute-label">Mã</th>
-                <td class="attribute-value">3467</td>
+                <td class="attribute-value">5468</td>
             </tr>
                     <tr>
                 <th class="attribute-label">CPU Series</th>
-                <td class="attribute-value">Intel Core i3 7th Gen</td>
+                <td class="attribute-value">Intel Core i5 7th Gen</td>
             </tr>
                     <tr>
                 <th class="attribute-label">CPU</th>
-                <td class="attribute-value">i3-7100U</td>
+                <td class="attribute-value">i5-7200U</td>
             </tr>
                     <tr>
                 <th class="attribute-label">Số nhân</th>
@@ -355,7 +359,7 @@
             </tr>
                     <tr>
                 <th class="attribute-label">Xung nhịp tối thiếu</th>
-                <td class="attribute-value">2.4 GHz</td>
+                <td class="attribute-value">2.5 GHz</td>
             </tr>
                     <tr>
                 <th class="attribute-label">Cache CPU</th>
@@ -395,15 +399,15 @@
             </tr>
                     <tr>
                 <th class="attribute-label">Card màn hình gắn ngoài</th>
-                <td class="attribute-value">Không có</td>
+                <td class="attribute-value">AMD Radeon R7 M440</td>
             </tr>
                     <tr>
                 <th class="attribute-label">Bộ nhớ VGA</th>
-                <td class="attribute-value">Không</td>
+                <td class="attribute-value">2GB</td>
             </tr>
                     <tr>
                 <th class="attribute-label">HDD</th>
-                <td class="attribute-value">1TB</td>
+                <td class="attribute-value">500GB</td>
             </tr>
                     <tr>
                 <th class="attribute-label">Dung lượng</th>
@@ -415,7 +419,7 @@
             </tr>
                     <tr>
                 <th class="attribute-label">Khu phím số</th>
-                <td class="attribute-value">Có</td>
+                <td class="attribute-value">Không</td>
             </tr>
                     <tr>
                 <th class="attribute-label">LED Bàn phím</th>
@@ -427,7 +431,7 @@
             </tr>
                     <tr>
                 <th class="attribute-label">Đầu đọc thẻ nhớ</th>
-                <td class="attribute-value">Có</td>
+                <td class="attribute-value">Không</td>
             </tr>
                     <tr>
                 <th class="attribute-label">Webcam</th>
@@ -447,7 +451,7 @@
             </tr>
                     <tr>
                 <th class="attribute-label">Cổng VGA</th>
-                <td class="attribute-value">Không</td>
+                <td class="attribute-value">Có</td>
             </tr>
                     <tr>
                 <th class="attribute-label">Kích thước</th>
@@ -455,7 +459,7 @@
             </tr>
                     <tr>
                 <th class="attribute-label">Khối lượng</th>
-                <td class="attribute-value">1.81kg</td>
+                <td class="attribute-value">2.06kg</td>
             </tr>
                     <tr>
                 <th class="attribute-label">Số cell pin</th>
@@ -742,14 +746,14 @@
 					<div class="col-md-2 col-xs-5">
 						<div class="product">
 							<div class="product-img">
-								<img src="https://phongvu.vn/media/catalog/product/cache/23/image/380x/9df78eab33525d08d6e5fb8d27136e95/uploads/product/p_11708/2017/09/26/11708.jpg" alt="">
+								<img src="https://phongvu.vn/media/catalog/product/cache/23/thumbnail/380x/9df78eab33525d08d6e5fb8d27136e95/uploads/product/p_13815/2017/10/05/13815.jpg" alt="">
 								<div class="product-label">
-									<span class="sale">-10%</span>
+									<span class="sale">-2%</span>
 								</div>
 							</div>
 							<div class="product-body">
-								<h3 class="product-name"><a href="#">DELL INSPIRON 14 5468-K5CDP1 (SILVER)</a></h3>
-								<h4 class="product-price">13.690.000 ₫ <del class="product-old-price">15.190.000 ₫</del></h4>
+								<h3 class="product-name"><a href="#">ASUS X510UQ-BR570 (I5-7200U) (Xám)</a></h3>
+								<h4 class="product-price">13.990.000 ₫ <del class="product-old-price">14.290.000 ₫</del></h4>
 								<div class="product-rating">
 								</div>
 							</div>
@@ -839,14 +843,14 @@
 					<div class="col-md-2 col-xs-5">
 						<div class="product">
 							<div class="product-img">
-								<img src="https://phongvu.vn/media/catalog/product/cache/23/thumbnail/380x/9df78eab33525d08d6e5fb8d27136e95/uploads/product/p_11708/2017/09/26/11708.jpg" alt="">
+								<img src="https://phongvu.vn/media/catalog/product/cache/23/thumbnail/380x/9df78eab33525d08d6e5fb8d27136e95/l/a/laptop-asus-ux510ux-cn204-15.6-i5-7200u-4gb-ddr4-hdd-1tb-xam-1.jpg" alt="">
 								<div class="product-label">
 									<span class="sale">-10%</span>
 								</div>
 							</div>
 							<div class="product-body">
-								<h3 class="product-name"><a href="#">DELL INSPIRON 14 5468-K5CDP1 (Bạc)</a></h3>
-								<h4 class="product-price">13.690.000 ₫ <del class="product-old-price">15.190.000 ₫</del></h4>
+								<h3 class="product-name"><a href="#">ASUS UX510UX-CN204 (I5-7200U) (Xám)</a></h3>
+								<h4 class="product-price">15.490.000 ₫ <del class="product-old-price">17.190.000 ₫</del></h4>
 								<div class="product-rating">
 								</div>
 							</div>
