--- a/header-footer.html
+++ b/header-footer.html
@@ -181,7 +181,7 @@
 						<ul class="footer-links">
 							<li><a href="#">DELL</a></li>
 							<li><a href="#">ASUS</a></li>
-							<li><a href="#">ACER</a></li>
+							<li><a href="#">MSI</a></li>
 							<li><a href="#">APPLE</a></li>
 						</ul>
 					</div>
