--- a/detail/dell/Dell Vostro 5468-VTI35008.html
+++ b/detail/dell/Dell Vostro 5468-VTI35008.html
@@ -154,7 +154,7 @@
 						<li class="active"><a href="#">Home</a></li>
 						<li><a href="#">DELL</a></li>
 						<li><a href="#">ASUS</a></li>
-						<li><a href="#">ACER</a></li>
+						<li><a href="#">MSI</a></li>
 						<li><a href="#">APPLE</a></li>
 					</ul>
 					<!-- /NAV -->
@@ -973,11 +973,11 @@
 							<div class="footer">
 								<h3 class="footer-title">Categories</h3>
 								<ul class="footer-links">
-									<li><a href="#">Hot deals</a></li>
-									<li><a href="#">Laptops</a></li>
-									<li><a href="#">Smartphones</a></li>
-									<li><a href="#">Cameras</a></li>
-									<li><a href="#">Accessories</a></li>
+									<li class="active"><a href="#">Home</a></li>
+									<li><a href="#">DELL</a></li>
+									<li><a href="#">ASUS</a></li>
+									<li><a href="#">MSI</a></li>
+									<li><a href="#">APPLE</a></li>
 								</ul>
 							</div>
 						</div>
