--- a/detail/dell/Dell XPS13 9360-99H103.html
+++ b/detail/dell/Dell XPS13 9360-99H103.html
@@ -154,7 +154,7 @@
 						<li class="active"><a href="#">Home</a></li>
 						<li><a href="#">DELL</a></li>
 						<li><a href="#">ASUS</a></li>
-						<li><a href="#">ACER</a></li>
+						<li><a href="#">MSI</a></li>
 						<li><a href="#">APPLE</a></li>
 					</ul>
 					<!-- /NAV -->
@@ -974,7 +974,7 @@
 									<li class="active"><a href="#">Home</a></li>
 									<li><a href="#">DELL</a></li>
 									<li><a href="#">ASUS</a></li>
-									<li><a href="#">ACER</a></li>
+									<li><a href="#">MSI</a></li>
 									<li><a href="#">APPLE</a></li>
 								</ul>
 							</div>
