--- a/index.html
+++ b/index.html
@@ -75,9 +75,13 @@
 							<form>
 								<select class="input-select">
 									<option value="0">Tất cả</option>
-									<option value="1">Laptop Gaming</option>
-									<option value="2">Laptop Văn phòng</option>
-									<option value="3">Laptop Doanh nhân</option>
+									<option value="1">Gaming</option>
+									<option value="2">Văn phòng</option>
+									<option value="3">Doanh nhân</option>
+									<option value="4">Dell</option>
+									<option value="5">Asus</option>
+									<option value="6">MSI</option>
+									<option value="7">Apple</option>
 								</select>
 								<input class="input" placeholder="Search here">
 								<button class="search-btn">Search</button>
@@ -504,7 +508,7 @@
 												<img src="./img/banchay-9.jpg" alt="">
 											</div>
 											<div class="product-body">
-												<p class="product-category">Category</p>
+												<p class="product-category">MSI</p>
 												<h3 class="product-name"><a href="#">Laptop MSI GP62M 7REX-1497XVN (I7-7700HQ)</a></h3>
 												<h4 class="product-price">28.990.000 ₫</h4>
 												<div class="product-rating">
@@ -530,7 +534,7 @@
 										<!-- product -->
 										<div class="product">
 											<div class="product-img">
-												<img src="./img/banchay10.jpg" alt="">
+												<img src="./img/banchay-10.jpg" alt="">
 											</div>
 											<div class="product-body">
 												<p class="product-category">MSI</p>
@@ -599,18 +603,17 @@
 								<!-- tab -->
 								<div id="tab1" class="tab-pane active">
 									<div class="products-slick" data-nav="#slick-nav-1">
+										
+										<!-- Laptop Asus UX430UN-GV097T (I7-8550U) -->
 										<!-- product -->
 										<div class="product">
 											<div class="product-img">
-												<img src="./img/product01.png" alt="">
-												<div class="product-label">
-													<span class="new">NEW</span>
-												</div>
+												<img src="./img/banchay-5.jpg" alt="">
 											</div>
 											<div class="product-body">
-												<p class="product-category">Category</p>
-												<h3 class="product-name"><a href="#">product name goes here</a></h3>
-												<h4 class="product-price">$980.00 <del class="product-old-price">$990.00</del></h4>
+												<p class="product-category">ASUS</p>
+												<h3 class="product-name"><a href="#">Laptop Asus UX430UN-GV097T (I7-8550U)</a></h3>
+												<h4 class="product-price">26.990.000 ₫<del class="product-old-price">28.990.000 ₫</del></h4>
 												<div class="product-rating">
 													<i class="fa fa-star"></i>
 													<i class="fa fa-star"></i>
@@ -630,24 +633,22 @@
 										</div>
 										<!-- /product -->
 
+										<!-- Laptop MSI GP72M 7REX-1216XVN (I7-7700HQ) -->
 										<!-- product -->
 										<div class="product">
 											<div class="product-img">
-												<img src="./img/product02.png" alt="">
-												<div class="product-label">
-													<span class="new">NEW</span>
-												</div>
+												<img src="./img/banchay-10.jpg" alt="">
 											</div>
 											<div class="product-body">
-												<p class="product-category">Category</p>
-												<h3 class="product-name"><a href="#">product name goes here</a></h3>
-												<h4 class="product-price">$980.00 <del class="product-old-price">$990.00</del></h4>
+												<p class="product-category">MSI</p>
+												<h3 class="product-name"><a href="#">Laptop MSI GP72M 7REX-1216XVN (I7-7700HQ)</a></h3>
+												<h4 class="product-price">27.999.000 ₫</h4>
 												<div class="product-rating">
 													<i class="fa fa-star"></i>
 													<i class="fa fa-star"></i>
 													<i class="fa fa-star"></i>
 													<i class="fa fa-star"></i>
-													<i class="fa fa-star-o"></i>
+													<i class="fa fa-star"></i>
 												</div>
 												<div class="product-btns">
 													<button class="add-to-wishlist"><i class="fa fa-heart-o"></i><span class="tooltipp">add to wishlist</span></button>
